--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
   </style>
 </head>
 <body>
-  <h1>Random Question</h1>
-  
+  <h1>Random Question Validator</h1>
+
+  <!-- Dropdown for domain selection -->
+  <label for="domain">Select Domain:</label>
+  <select id="domain">
+    <option value="Computer_Security">Computer Security</option>
+    <option value="History">History</option>
+    <option value="Social_Science">Social Science</option>
+  </select>
+
   <!-- Button to fetch a random question -->
   <button id="fetchQuestion">Get Random Question</button>
 
@@ -31,8 +39,7 @@
     <p><strong>Option C:</strong> <span id="optionC"></span></p>
     <p><strong>Option D:</strong> <span id="optionD"></span></p>
     <p><strong>Correct Answer:</strong> <span id="correctAnswer"></span></p>
-    <p><strong>Response Time:</strong> <span id="responseTime"></span></p>
-  </div>  
+  </div>
 
   <!-- Button to validate the answer with ChatGPT -->
   <button id="validateAnswer" disabled>Validate Answer</button>
@@ -54,37 +61,36 @@
     const optionDElement = document.getElementById('optionD');
     const correctAnswerElement = document.getElementById('correctAnswer');
     const responseElement = document.getElementById('response');
-    const responseTimeElement = document.getElementById('responseTime');
     
     let currentQuestion = null;
 
     // Fetch a random question
     fetchQuestionButton.addEventListener('click', async () => {
-  try {
-    const response = await fetch('http://localhost:3000/random-question');
-    if (!response.ok) {
-      throw new Error('Error fetching question');
-    }
-    const data = await response.json();
+      const domain = document.getElementById('domain').value; // Get selected domain
+      try {
+        const response = await fetch(`http://localhost:3000/random-question?domain=${domain}`);
+        if (!response.ok) {
+          throw new Error('Error fetching question');
+        }
+        const data = await response.json();
 
-    // Display the question and options
-    currentQuestion = data;
-    document.getElementById('questionId').textContent = data._id; // Display the question ID
-    questionElement.textContent = data.question;
-    optionAElement.textContent = data.A;
-    optionBElement.textContent = data.B;
-    optionCElement.textContent = data.C;
-    optionDElement.textContent = data.D;
-    correctAnswerElement.textContent = data.correctAnswer;
+        // Display the question and options
+        currentQuestion = data;
+        document.getElementById('questionId').textContent = data._id; // Display the question ID
+        questionElement.textContent = data.question;
+        optionAElement.textContent = data.A;
+        optionBElement.textContent = data.B;
+        optionCElement.textContent = data.C;
+        optionDElement.textContent = data.D;
+        correctAnswerElement.textContent = data.correctAnswer;
 
-    // Enable the "Validate Answer" button
-    validateAnswerButton.disabled = false;
-  } catch (error) {
-    console.error('Error:', error);
-    alert('Failed to fetch question');
-  }
-});
-
+        // Enable the "Validate Answer" button
+        validateAnswerButton.disabled = false;
+      } catch (error) {
+        console.error('Error:', error);
+        alert('Failed to fetch question');
+      }
+    });
 
     // Validate the answer with ChatGPT
     validateAnswerButton.addEventListener('click', async () => {
@@ -97,14 +103,14 @@
             'Content-Type': 'application/json'
           },
           body: JSON.stringify({
+            domain: document.getElementById('domain').value, // Send domain as well
             _id: currentQuestion._id,
             question: currentQuestion.question,
             A: currentQuestion.A,
             B: currentQuestion.B,
             C: currentQuestion.C,
-            D: currentQuestion.D,
-            })
-
+            D: currentQuestion.D
+          })
         });
 
         const result = await response.json();
@@ -114,7 +120,6 @@
 
         // Display ChatGPT's response
         responseElement.textContent = `ChatGPT Response: ${result.chatGPTResponse}`;
-        responseTimeElement.textContent = `${result.responseTime} ms`; // Show the response time
         
       } catch (error) {
         console.error('Error:', error);
