--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
   <!-- Display result of ChatGPT responses generation -->
   <div id="generateResponseResult"></div>
 
+  <iframe style="background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);width: 100vw;height: 100vh;"  src="https://charts.mongodb.com/charts-project-0-wounplb/embed/dashboards?id=0fd2bc7e-c6cf-4677-bf53-fd383523db11&theme=light&autoRefresh=false&maxDataAge=3600&showTitleAndDesc=true&scalingWidth=fixed&scalingHeight=fixed"></iframe>
+
   <!-- Script to interact with the server -->
   <script>
     const fetchQuestionButton = document.getElementById('fetchQuestion');
