--- a/index.html
+++ b/index.html
@@ -1,168 +1,112 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Random Question Validator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    #question-container {
-      margin-bottom: 20px;
-    }
-    #response, #validationResult, #generateResponseResult {
-      margin-top: 20px;
-    }
-    select, button {
-      margin: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>rs4020proj</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-  <h1>Random Question</h1>
-  
-  <!-- Dropdown to select domain for generating responses -->
-  <div>
-    <label for="domainSelect">Select Domain:</label>
-    <select id="domainSelect">
-      <option value="Computer_Security">Computer Security</option>
-      <option value="Social_Science">Social Science</option>
-      <option value="History">History</option>
-    </select>
-  </div>
+    <table class="main-table">
+        <tbody>
+            <tr>
+                <td>
+                    <table class="inner-table">
+                        <tbody>
+                            <tr>
+                                <td class="content">
+                                    <p class="name">Rohme Cabacungan</p>
+                                    <p>I am currently in my 5th year at York University studying Information Technology (BA). My main fields of interest are cybersecurity, network security, and system administration. I also have web development experience from high school and university courses (e.g., ITEC 3020).</p>
+                                    <p>I am familiar with HTML, CSS, JavaScript, jQuery, AJAX, and Angular. Outside of school, I’ve worked on side projects using Docker, API keys, and databases like MySQL and PostgreSQL. I aim to apply these experiences to this project for ITEC 4020.</p>
+                                    <p class="contact">
+                                        <a href="mailto:angelocabacungan@gmail.com">Email</a> /
+                                        <a href="https://github.com/Ohm-sudo/">GitHub</a>
+                                    </p>
 
-  <!-- Button to fetch a random question -->
-  <button id="fetchQuestion">Get Random Question</button>
+                                    <p class="name">Shawn Pangilinan</p>
+                                    <p>I am in my fifth year at York University, majoring in Information Technology. My primary interests are cybersecurity, network security, and web development. For this project, I bring experience in JavaScript, HTML, and CSS.</p>
+                                    <p class="contact">
+                                        <a href="mailto:shaunbp123@gmail.com">Email</a> /
+                                        <a href="https://github.com/shaunbp/">GitHub</a>
+                                    </p>
+                                </td>
+                                <td class="images">
+                                    <a href="pictures/rohmec.png">
+                                        <img src="pictures/rohmec.png" alt="Rohme Cabacungan" class="profile-photo">
+                                    </a>
+                                    <a href="pictures/shaunP.jpg">
+                                        <img src="pictures/shaunP.jpg" alt="Shawn Pangilinan" class="profile-photo">
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
 
-  <!-- Button to generate ChatGPT responses for all questions in the selected domain -->
-  <button id="generateChatGPTResponses">Generate ChatGPT Responses</button>
+                    <section class="projects">
+                        <h1 class="section-title">Projects</h1>
+                        <article>
+                            <h2>Measuring ChatGPT Efficiency</h2>
+                            <p>The purpose of this project is to <strong>evaluate the efficiency of ChatGPT</strong> in answering questions from domains such as <strong>History, Social Science, and Computer Security</strong>.</p>
+                            <div class="project-details">
+                                <h3>Research Approach</h3>
+                                <ul>
+                                    <li>Created a <strong>GitHub repository</strong> to host web content.</li>
+                                    <li>Synced changes using <strong>GitHub Desktop</strong>.</li>
+                                    <li>Used <strong>Node.js, Express.js, Mongoose</strong> for dynamic content.</li>
+                                    <li>Utilized <strong>MongoDB Atlas</strong> for cloud-based data storage.</li>
+                                    <li>Integrated a <strong>ChatGPT API</strong> for database interaction.</li>
+                                </ul>
 
-  <!-- Display the fetched question -->
-  <div id="question-container">
-    <p><strong>Question ID:</strong> <span id="questionId"></span></p>
-    <p><strong>Question:</strong> <span id="question"></span></p>
-    <p><strong>Option A:</strong> <span id="optionA"></span></p>
-    <p><strong>Option B:</strong> <span id="optionB"></span></p>
-    <p><strong>Option C:</strong> <span id="optionC"></span></p>
-    <p><strong>Option D:</strong> <span id="optionD"></span></p>
-    <p><strong>Correct Answer:</strong> <span id="correctAnswer"></span></p>
-  </div>
+                                <h3>Dataset Overview</h3>
+                                <ul>
+                                    <li>Domains: <strong>History, Social Science, Computer Security</strong>.</li>
+                                    <li>50 questions per domain, stored in a MongoDB database called <strong>ChatGPT_Evaluation</strong>.</li>
+                                    <li>Each question includes fields such as <strong>_id</strong>, <strong>question</strong>, <strong>options (A, B, C, D)</strong>, <strong>correctAnswer</strong>, and <strong>chatGPTResponse</strong>.</li>
+                                </ul>
+                            </div>
+                        </article>
+                    </section>
 
-  <!-- Button to validate the answer with ChatGPT -->
-  <button id="validateAnswer" disabled>Validate Answer</button>
+                    <section class="interactive-section">
+                        <h2>Random Question Generator</h2>
+                        <div class="selector">
+                            <label for="domainSelect">Select Domain:</label>
+                            <select id="domainSelect">
+                                <option value="Computer_Security">Computer Security</option>
+                                <option value="Social_Science">Social Science</option>
+                                <option value="History">History</option>
+                            </select>
+                        </div>
 
-  <!-- Display the ChatGPT response -->
-  <div id="response"></div>
+                        <div class="buttons">
+                            <button id="fetchQuestion">Get Random Question</button>
+                            <button id="generateChatGPTResponses">Generate ChatGPT Responses</button>
+                        </div>
 
-  <!-- Display if the response is correct -->
-  <div id="validationResult"></div>
+                        <div id="question-container">
+                            <p><strong>Question ID:</strong> <span id="questionId"></span></p>
+                            <p><strong>Question:</strong> <span id="question"></span></p>
+                            <p><strong>Option A:</strong> <span id="optionA"></span></p>
+                            <p><strong>Option B:</strong> <span id="optionB"></span></p>
+                            <p><strong>Option C:</strong> <span id="optionC"></span></p>
+                            <p><strong>Option D:</strong> <span id="optionD"></span></p>
+                            <p><strong>Correct Answer:</strong> <span id="correctAnswer"></span></p>
+                            <button id="validateAnswer" disabled>Validate Answer</button>
+                            <div id="response"></div>
+                            <div id="validationResult"></div>
+                        </div>
+                    </section>
 
-  <!-- Display result of ChatGPT responses generation -->
-  <div id="generateResponseResult"></div>
+                    <section class="results">
+                        <h2>Results</h2>
+                        <iframe src="https://charts.mongodb.com/charts-project-0-wounplb/embed/dashboards?id=72778ef6-2180-46e4-b515-42af7d05f1c6&theme=light" 
+                                class="chart"></iframe>
+                    </section>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 
-  <iframe style="background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);width: 100vw;height: 100vh;"  src="https://charts.mongodb.com/charts-project-0-wounplb/embed/dashboards?id=0fd2bc7e-c6cf-4677-bf53-fd383523db11&theme=light&autoRefresh=false&maxDataAge=3600&showTitleAndDesc=true&scalingWidth=fixed&scalingHeight=fixed"></iframe>
-
-  <!-- Script to interact with the server -->
-  <script>
-    const fetchQuestionButton = document.getElementById('fetchQuestion');
-    const validateAnswerButton = document.getElementById('validateAnswer');
-    const questionElement = document.getElementById('question');
-    const optionAElement = document.getElementById('optionA');
-    const optionBElement = document.getElementById('optionB');
-    const optionCElement = document.getElementById('optionC');
-    const optionDElement = document.getElementById('optionD');
-    const correctAnswerElement = document.getElementById('correctAnswer');
-    const responseElement = document.getElementById('response');
-    const generateResponseResult = document.getElementById('generateResponseResult');
-    const domainSelect = document.getElementById('domainSelect');
-    
-    let currentQuestion = null;
-
-    // Fetch a random question
-    fetchQuestionButton.addEventListener('click', async () => {
-      const domain = domainSelect.value; // Get selected domain from the dropdown
-      try {
-        const response = await fetch(`http://localhost:3000/random-question?domain=${domain}`);
-        if (!response.ok) {
-          throw new Error('Error fetching question');
-        }
-        const data = await response.json();
-
-        // Display the question and options
-        currentQuestion = data;
-        document.getElementById('questionId').textContent = data._id; // Display the question ID
-        questionElement.textContent = data.question;
-        optionAElement.textContent = data.A;
-        optionBElement.textContent = data.B;
-        optionCElement.textContent = data.C;
-        optionDElement.textContent = data.D;
-        correctAnswerElement.textContent = data.correctAnswer;
-
-        // Enable the "Validate Answer" button
-        validateAnswerButton.disabled = false;
-      } catch (error) {
-        console.error('Error:', error);
-        alert('Failed to fetch question');
-      }
-    });
-
-
-    // Validate the answer with ChatGPT
-    validateAnswerButton.addEventListener('click', async () => {
-      if (!currentQuestion) return;
-
-      const domain = document.getElementById('domainSelect').value; // Get selected domain from the dropdown
-
-      try {
-        const response = await fetch('http://localhost:3000/chatgpt-response', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({
-            _id: currentQuestion._id,
-            question: currentQuestion.question,
-            A: currentQuestion.A,
-            B: currentQuestion.B,
-            C: currentQuestion.C,
-            D: currentQuestion.D,
-            domain: domain
-          })
-        });
-
-        const result = await response.json();
-        if (!response.ok) {
-          throw new Error(result.message);
-        }
-
-        // Display ChatGPT's response
-        responseElement.textContent = `ChatGPT Response: ${result.chatGPTResponse}`;
-        
-      } catch (error) {
-        console.error('Error:', error);
-        alert('Failed to validate answer');
-      }
-    });
-
-    // Generate ChatGPT responses for all questions in the selected domain
-    document.getElementById('generateChatGPTResponses').addEventListener('click', async () => {
-      const selectedDomain = domainSelect.value; // Get selected domain from the dropdown
-      try {
-        const response = await fetch(`http://localhost:3000/generate-chatgpt-responses?domain=${selectedDomain}`);
-
-        const result = await response.json();
-        if (!response.ok) {
-          throw new Error(result.message);
-        }
-
-        // Show success message
-        generateResponseResult.textContent = `Successfully generated ChatGPT responses for all questions in ${selectedDomain} domain.`;
-      } catch (error) {
-        console.error('Error generating responses:', error);
-        generateResponseResult.textContent = `Failed to generate ChatGPT responses for ${selectedDomain} domain.`;
-      }
-    });
-  </script>
+    <script src="question.js"></script>
 </body>
 </html>
