--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                                     </p>
                                 </td>
                                 <td class="images">
-                                    <a href="pictures/rohmec.png">
-                                        <img src="pictures/rohmec.png" alt="Rohme Cabacungan" class="profile-photo">
+                                    <a href="pictures/rohmeC.png">
+                                        <img src="pictures/rohmeC.png" alt="Rohme Cabacungan" class="profile-photo">
                                     </a>
                                     <a href="pictures/shaunP.jpg">
                                         <img src="pictures/shaunP.jpg" alt="Shawn Pangilinan" class="profile-photo">
