Generate ChatGPT Responses now records the Response Time

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                         <a href="https://github.com/Ohm-sudo/">GitHub</a>
                                     </p>
 
-                                    <p class="name">Shawn Pangilinan</p>
+                                    <p class="name">Shaun Pangilinan</p>
                                     <p>I am in my fifth year at York University, majoring in Information Technology. My primary interests are cybersecurity, network security, and web development. For this project, I bring experience in JavaScript, HTML, and CSS.</p>
                                     <p class="contact">
                                         <a href="mailto:shaunbp123@gmail.com">Email</a> /
