Added function to display avg response time for each collection

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
                     <section class="results">
                         <h2>Results</h2>
+                        <p id="average-response-time">Average Response Time: Loading...</p>
                         <iframe src="https://charts.mongodb.com/charts-project-0-wounplb/embed/dashboards?id=72778ef6-2180-46e4-b515-42af7d05f1c6&theme=light" 
                                 class="chart"></iframe>
                     </section>
