Added Response Time Graphs

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                         <p id="average-response-time">Average Response Time: Loading...</p>
                         <iframe src="https://charts.mongodb.com/charts-project-0-wounplb/embed/dashboards?id=72778ef6-2180-46e4-b515-42af7d05f1c6&theme=light" 
                                 class="chart"></iframe>
+                        <iframe src="https://charts.mongodb.com/charts-project-0-wounplb/embed/dashboards?id=701ef367-b763-417f-a63a-ce1222f7877b&theme=light&autoRefresh=true&maxDataAge=3600&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed"
+                        class="chart"></iframe>
                     </section>
                 </td>
             </tr>
