Added code comments

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <li><strong>OpenAI API:</strong> for sending ChatGPT our questions and retrieving its answers to be used for evaluation.</li>
                                     <li><strong>Node.js:</strong> for server-side environment creation.</li>
                                     <li><strong>Express.js:</strong> a web framework for Node.js.</li>
-                                    <li><strong>Mongoose:</strong> library to define schemas and connect MongoDB and Node.js together.</li>
+                                    <li><strong>Mongoose:</strong> a library to define schemas.</li>
                                 </ul>
 
                                 <h3>Dataset Overview</h3>
